# cmake-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
include/example/: example.hpp  main.hpp  meta.hpp
lib/example/: main.cpp  meta.cpp.in
src/: main.cpp
test-src/: test_main.cpp
